--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noah's Tic Tac Toe game</title>
+  <link rel="stylesheet" href="stylesheet.css">
+  <script src="app.js" defer></script>
 </head>
 <body>
-  
+  <div id="title">
+    <h1>Tic Tac Toe</h1>
+  </div>
+
+  <div class="board">
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+    <div class="cell"></div>
+  </div>
 </body>
 </html>
