Add win check + fixes

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noah's Tic Tac Toe game</title>
   <link rel="stylesheet" href="stylesheet.css">
-  <script src="app.js" defer></script>
 </head>
 <body>
   <div id="title">
     <h1>Tic Tac Toe</h1>
   </div>
-
+  
   <div class="board">
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
+    <div class="cell" id="cell-1"></div>
+    <div class="cell" id="cell-2"></div>
+    <div class="cell" id="cell-3"></div>
+    <div class="cell" id="cell-4"></div>
+    <div class="cell" id="cell-5"></div>
+    <div class="cell" id="cell-6"></div>
+    <div class="cell" id="cell-7"></div>
+    <div class="cell" id="cell-8"></div>
+    <div class="cell" id="cell-9"></div>
   </div>
+  <script src="app.js" defer></script>
 </body>
 </html>
