--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>Tic Tac Toe</h1>
   </div>
   
+  <div class="player-display"></div>
+  <button class="reset-board" onclick="resetBoard()">Reset</button>
+
+
   <div class="board">
     <div class="cell" id="cell-1"></div>
     <div class="cell" id="cell-2"></div>
@@ -23,6 +27,12 @@
     <div class="cell" id="cell-8"></div>
     <div class="cell" id="cell-9"></div>
   </div>
+
+  <div class="playerInput">
+    <input type="text" id="player1" placeholder="Player 1">
+    <input type="text" id="player2" placeholder="Player 2">
+  </div>
+  <button class="change-name" onclick="changeName()">Submit</button>
   <script src="app.js" defer></script>
 </body>
 </html>
